# kuka-experimental

./: .gitignore  Dockerfile  build-server.sh
kuka_kr16_support/: CMakeLists.txt  package.xml
kuka_kr16_support/config/: kr16.rviz
kuka_kr16_support/launch/: visualize.launch.py
kuka_kr16_support/meshes/kr16/collision/: link_5.stl  link_6.stl
kuka_kr16_support/robots/: kr16.urdf.xacro  kr16.xacro  kr16_2.urdf.xacro  kr16_2.xacro
kuka_kr16_support/ros2_control/: kr16.ros2_control.xacro  kr16_2.ros2_control.xacro
kuka_kr16_support/urdf/: kr16_2.urdf
kuka_kr_description/: CMakeLists.txt  package.xml
kuka_kr_description/meshes/kr16/collision/: link_1.stl  link_4.stl
kuka_kr_description/meshes/kr16/visual/: base_link.dae  link_4.dae  link_5.dae  link_6.dae
kuka_kr_description/meshes/kr70/collision/: base_link.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
kuka_kr_description/meshes/kr70/visual/: link_6.dae
kuka_kr_description/robots/: kr16.urdf.xacro  kr16.xacro  kr16_2.urdf.xacro  kr16_2.xacro  kr210_r2700.urdf.xacro  kr210_r2700.xacro  kr70.urdf.xacro  kr70.xacro
kuka_kr_description/ros2_control/: kr210_r2700.ros2_control.xacro  kr70.ros2_control.xacro
kuka_rsi_simulator/: CMakeLists.txt  aica-package.toml  package.xml  setup.cfg
kuka_rsi_simulator/kuka_rsi_simulator/: simulator.py
kuka_rsi_simulator/launch/: simulator.launch.py
